@@ -1,6 +1,7 @@
 24 May 2006: Wouter
 	- unit tests print progress while running to stderr. Included license
 	  of cutest with its source in svn repository.
+	- stack type (for the IPC buffer of zone update dirty). And unit test.
 
 22 May 2006: Wouter
 	- ported over minor nits from 2.3.5 NSD fixups. Cast to (void) 
